Misc ordering and text cleanup

--- a/igm_mycourses_templates/CodeOfConduct.html
+++ b/igm_mycourses_templates/CodeOfConduct.html
@@ -32,7 +32,6 @@
         <li>Encourage experimentation and creativity</li>
         <li>Empower people to solve their own problems</li>
         <li>Demonstrate how much you can help, not how much you know</li>
-        <li>It's more than ok to ask for help</li>
         <li>When in doubt, ask questions, someone else is probably wondering too</li>
         <li>When talking about someone, say nothing you wouldn't say directly to them</li>
         <li>Be mindful of who else is in the lab and your impact on the space</li>
@@ -46,10 +45,10 @@
     <h4>In Slack</h4>
     <p>Within the Slack workspace, all RIT rules still apply and we reserve the right to remove anyone at any time.</p>
     <ul>
+        <li>Do NOT share large sections of code. Posts such as “Please debug this” and “Here’s my solution” will be considered a violation of the academic integrity policy.</li>
         <li>DO ask questions about concepts, homework clarifications, etc.</li>
         <li>DO feel free to answer questions from your peers.</li>
-        <li>Do NOT share large sections of code. Posts such as “Please debug this” and “Here’s my solution” will be considered a violation of the academic integrity policy.</li>
-        <li>DO ask yourself if your message is respectful. If it's disrespectful against any individual or group, you will see consequences.</li>
+        <li>DO ask yourself if your message is respectful and constructive.</li>
         <li>DO share links or examples that seem useful.</li>
         <li>DO use #random and other general channels to get to know us and your peers!</li>
     </ul>
@@ -92,4 +91,6 @@
         <li>NTID Counseling &amp; Academic Adv. Services &ndash; 2nd Floor Lynden B. Johnson; 585-475-6468 (v), 585-286-4070 (vp).</li>
     </ul>
 
-</body></html>
+</body>
+
+</html>
