--- a/igm_mycourses_templates/CourseElements_and_Grading.html
+++ b/igm_mycourses_templates/CourseElements_and_Grading.html
@@ -23,30 +23,94 @@
 
 
     <h2>Course Elements</h2>
-    <div class="table-responsive">
-        <table class="table table-bordered" style="width: 50%;">
-            <tbody>
-                <tr>
-                    <td>A</td>
-                    <td>xx%</td>
-                </tr>
-                <tr>
-                    <td>A</td>
-                    <td>xx%</td>
-                </tr>
-                <tr>
-                    <td>A</td>
-                    <td>xx%</td>
-                </tr>
-                <tr>
-                    <td>A</td>
-                    <td>xx%</td>
-                </tr>
-            </tbody>
-        </table>
+    <p><strong>Unless otherwise stated, ALL work in this course will be individual efforts only!</strong></p>
+    <p>Your final course grade will be determined based on the following course element weights and letter grade thresholds.</p>
+
+    <div class="two-col-panels" style="width: 50%;">
+        <div class="row">
+            <div class="col-sm card bg-light">
+                <div class="card-body">
+                    <div class="table-responsive" style="padding: 0px; margin: 0px;">
+                        <table class="table table-bordered" style="width: 100%; padding: 0px; margin: 0px;">
+                            <tbody>
+                                <tr>
+                                    <td style=" padding: 2px; margin: 0px;">Exams</td>
+                                    <td style=" padding: 2px; margin: 0px;">xx%</td>
+                                </tr>
+                                <tr>
+                                    <td style=" padding: 2px; margin: 0px;">Homeworks</td>
+                                    <td style=" padding: 2px; margin: 0px;">xx%</td>
+                                </tr>
+                                <tr>
+                                    <td style=" padding: 2px; margin: 0px;">Quizzes</td>
+                                    <td style=" padding: 2px; margin: 0px;">xx%</td>
+                                </tr>
+                                <tr>
+                                    <td style=" padding: 2px; margin: 0px;">Practice Exercises</td>
+                                    <td style=" padding: 2px; margin: 0px;">xx%</td>
+                                </tr>
+                                <tr>
+                                    <td style=" padding: 2px; margin: 0px;">Project</td>
+                                    <td style=" padding: 2px; margin: 0px;">xx%</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm card bg-light">
+                <div class="card-body">
+                    <div class="table-responsive" style="padding: 0px; margin: 0px;">
+                        <table class="table table-bordered" style="width: 100%; padding: 0px; margin: 0px;">
+                            <tbody>
+                                <tr>
+                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">A</td>
+                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 93.0</td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">A-</td>
+                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 90.0 &amp; &lt; 93.0</td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">B+</td>
+                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 87.0 &amp; &lt; 90.0</td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">B</td>
+                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 83.0 &amp; &lt; 87.0</td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">B-</td>
+                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 80.0 &amp; &lt; 83.0</td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">C+</td>
+                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 77.0 &amp; &lt; 80.0</td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">C</td>
+                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 73.0 &amp; &lt; 77.0</td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">C-</td>
+                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 70.0 &amp; &lt; 73.0</td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">D</td>
+                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&gt;= 60.0 &amp; &lt; 70.0</td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 24.9123%; padding: 2px; margin: 0px;">F</td>
+                                    <td style="width: 75.0877%; padding: 2px; margin: 0px;">&lt; 60.0</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <p><strong>Unless otherwise stated, ALL work in this course will be individual efforts only!</strong></p>
     <h3>XXX (xx%)</h3>
     <p>SUMMARY</p>
     <ul>
@@ -69,73 +133,6 @@
 
     <h3>Incomplete Policy</h3>
     <p>Incomplete (&ldquo;I&rdquo;) grades are reserved for cases in which the student is making credible course progress, and then something occurs in the student&rsquo;s life that prevents the completion of the course. Incomplete grades are not a mechanism to delay a failing grade nor are they a means to stave off probation or a suspension. For an instructor to grant an incomplete, credible documentation must be provided at the instructor&rsquo;s or school&rsquo;s request.</p>
-
-    <p>Your final course grade will be determined based on the following letter grade thresholds.</p>
-    <div class="two-col-panels">
-        <div class="row">
-            <div class="col-sm card bg-light">
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-bordered" style="width: 100%;">
-                            <tbody>
-                                <tr>
-                                    <td style="width: 75.0877%;">&gt;= 93.0</td>
-                                    <td style="width: 24.9123%;">A</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 75.0877%;">&gt;= 90.0 &amp; &lt; 93.0</td>
-                                    <td style="width: 24.9123%;">A-</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 75.0877%;">&gt;= 87.0 &amp; &lt; 90.0</td>
-                                    <td style="width: 24.9123%;">B+</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 75.0877%;">&gt;= 83.0 &amp; &lt; 87.0</td>
-                                    <td style="width: 24.9123%;">B</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 75.0877%;">&gt;= 80.0 &amp; &lt; 83.0</td>
-                                    <td style="width: 24.9123%;">B-</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm card bg-light">
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-bordered" style="width: 100%;">
-                            <tbody>
-                                <tr>
-                                    <td style="width: 75.0877%;">&gt;= 77.0 &amp; &lt; 80.0</td>
-                                    <td style="width: 24.9123%;">C+</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 75.0877%;">&gt;= 73.0 &amp; &lt; 77.0</td>
-                                    <td style="width: 24.9123%;">C</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 75.0877%;">&gt;= 70.0 &amp; &lt; 73.0</td>
-                                    <td style="width: 24.9123%;">C-</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 75.0877%;">&gt;= 60.0 &amp; &lt; 70.0</td>
-                                    <td style="width: 24.9123%;">D</td>
-                                </tr>
-                                <tr>
-                                    <td style="width: 75.0877%;">&lt; 60.0</td>
-                                    <td style="width: 24.9123%;">F</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
 
 
