--- a/igm_mycourses_templates/CourseOverview.html
+++ b/igm_mycourses_templates/CourseOverview.html
@@ -66,30 +66,20 @@
         <li>BOOK INFO</li>
     </ul>
 
-    <h2>Important Dates, Spring 2022 (2215)</h2>
-    <div class="content">
-        <ul>
-            <li>1/17: Martin Luther King Jr. Day (No classes</li>
-            <li>1/18: Last day of Add/Drop period</li>
-            <li>3/6-13: Spring Break - No Classes</li>
-            <li>4/1: Last day to drop from classes with a grade of "W"</li>
-            <li>4/25: Last day, evening, and online classes</li>
-            <li>4/26: Reading Day</li>
-            <li>4/27-5/4: Final exams</li>
-            <li>5/6: Final grades due</li>
-        </ul>
-
-    </div>
+    <h3>Use of Copyrighted Material</h3>
+    <p>Certain materials used in this course are protected by copyright and may not be copied or distributed by students. You can find more information at <a href="http://www.rit.edu/academicaffairs/policiesmanual/sectionC/C3_2.html" target="_blank" rel="noopener">http://www.rit.edu/academicaffairs/policiesmanual/sectionC/C3_2.html</a>.</p>
 
     <h2>University Guidance for Health/Safety in the Classroom</h2>
     <p>Faculty will provide details about information specific to specialized classrooms or labs in alignment with overall University policies. Any concerns with these policies should be addressed to faculty or department offices.</p>
     <p>See the <a href="https://www.rit.edu/ready/rit-safety-plan" target="_blank" rel="noopener">RIT Safety Plan</a> for details about health/safety policies that apply university-wide. </p>
 
-    <h2>Use of Copyrighted Material</h2>
-    <p>Certain materials used in this course are protected by copyright and may not be copied or distributed by students. You can find more information at <a href="http://www.rit.edu/academicaffairs/policiesmanual/sectionC/C3_2.html" target="_blank" rel="noopener">http://www.rit.edu/academicaffairs/policiesmanual/sectionC/C3_2.html</a>.</p>
-
-    <h2>Emergencies</h2>
+    <h3>Emergencies</h3>
     <p>In the event of a University-wide emergency, course requirements, classes, deadlines and grading schemes are subject to changes that may include alternative delivery methods, alternative methods of interaction with the instructor, class materials, and/or classmates, a revised attendance policy, and a revised calendar and/or grading scheme.</p>
+
+    <h2>Accomodations</h2>
+    <p>The Disability Services Office is dedicated to facilitating equitable access to the full RIT experience for students with disabilities. We value disability as diversity and work in collaboration with campus partners to foster a welcoming, diverse, and inclusive campus community. Any RIT student with a permanent or temporary disability can register and request accommodations with the Disability Services Office. Accommodations are determined on a case-by-case basis via a student-centered process, taking into account what is most appropriate and reasonable for an individual student. Visit <a href="www.rit.edu/dso">www.rit.edu/dso</a> to learn more.</p>
+
+    <p class="tab"><strong>After you receive academic adjustment approval, it is imperative that you contact me as early as possible so that we can work out whatever arrangement is necessary.</strong></p>
 
 
 </body></html>
