--- a/igm_mycourses_templates/communications.html
+++ b/igm_mycourses_templates/communications.html
@@ -53,9 +53,9 @@
     <p>I will provide any course announcements through the Announcements on the Course Home Page. This includes any updates or changes to assignments or other course assignments, as well as general comments about assignment results or discussions. Please check your RIT e-mail &amp; myCourses daily for important notifications.</p>
 
     <h3>Slack</h3>
-    <p>Slack is a way to <em>extend our time together and build community</em> in a more casual way. People can have discussions or ask questions. Questions may be answered by myself, our TAs, or other students.&nbsp;</p>
+    <p>Slack is a way to extend our time together and build community in a more casual way. People can have discussions or ask questions. Questions may be answered by myself, our TAs, or other students.&nbsp;</p>
 
-    <p class="tab">Slack is NOT a replacement for attending class, studying, doing assignments, etc!</p>
+    <p class="tab"><em>Slack is NOT a replacement for attending class, studying, doing assignments, etc!</em></p>
 
     <p>If you have general questions about the course or an assignment, please post your questions to a public channel in Slack so all students can benefit from the answer. If, as a student, you can answer a question posed, I encourage you to reply to your classmate.</p>
 
@@ -63,11 +63,10 @@
     <p><strong>If you have a question about your particular assignment, grade, etc, please contact me privately.</strong></p>
 
     <h3>Slack DMs</h3>
-    <p>I check email frequently, but Slack DMs are usually the fastest way to reach me. If you do not receive a response from me within 24 hours, Monday-Friday, contact me again as it is likely I missed your first message. Messages over the weekend may take slightly longer for a response. Unless a topic is sensitive, I strongly encourage you to copy the TAs on any messages to me by <a href="https://slack.com/help/articles/1500002969782-Add-more-people-to-a-group-direct-message">creating a group DM</a>. The TAs can answer most questions and, regardless, I like them to be "in the loop" as much as possible.</p>
+    <p>I check email often, but Slack DMs are usually the fastest way to reach me. If you do not receive a response from me within 24 hours, Monday-Friday, contact me again as it is likely I missed your first message. Messages over the weekend may take slightly longer for a response. Unless a topic is sensitive, I strongly encourage you to copy the TAs on any messages to me by <a href="https://slack.com/help/articles/1500002969782-Add-more-people-to-a-group-direct-message">creating a group DM</a>. The TAs can answer most questions and, regardless, I like them to be "in the loop" as much as possible.</p>
 
     <h3>Email</h3>
-
-    <p><strong>When using email, please make sure to use only the email address noted above.</strong> I do have others associated with RIT, but I do NOT check them! Always include a subject line and be sure to mention the class name and section. It’s also expected that you use complete sentences and punctuation, as well as sign your name.</p>
+    <p>Always include a subject line and be sure to mention the class name and section. It’s also expected that you use complete sentences and punctuation, as well as sign your name.</p>
 
     <h3>Office Hours</h3>
     <p>Office hours offer you the opportunity to ask individual questions about the course material that you may have not had time to ask in class. Office hours are held on a first-come-first-served drop-in basis with no appointment necessary. Sometimes office hours become increasingly busy the closer it is to a deadline or the end of the semester. If students are waiting, discussions will be limited to ~10 minutes/student. Plan your use of office hours accordingly.&nbsp;</p>
