added whitespace line breaks between paragraphs for readability

--- a/igm_mycourses_templates/CodeOfConduct.html
+++ b/igm_mycourses_templates/CodeOfConduct.html
@@ -67,19 +67,29 @@
     </div>
 
     <h3>Academic Integrity</h3>
-    <p>As an institution of higher learning, RIT expects students to behave honestly and ethically at all times, especially when submitting work for evaluation in conjunction with any course or degree requirement. RIT encourages all students to become familiar with the&nbsp;<a href="https://www.rit.edu/academicaffairs/policiesmanual/p030" target="_blank" rel="noopener">RIT Honor Code</a> and with <a href="https://www.rit.edu/academicaffairs/policiesmanual/d080" target="_blank" rel="noopener">RIT&rsquo;s Academic Integrity Policy</a>.</p>
+    <p>As an institution of higher learning, RIT expects students to behave honestly and ethically at all times, especially when submitting work for evaluation in conjunction with any course or degree requirement. RIT encourages all students to become familiar with the <a href="https://www.rit.edu/academicaffairs/policiesmanual/p030" target="_blank" rel="noopener">RIT Honor Code</a> and with <a href="https://www.rit.edu/academicaffairs/policiesmanual/d080" target="_blank" rel="noopener">RIT&rsquo;s Academic Integrity Policy</a>.</p>
+
     <p>The Department of Interactive Games and Media does not condone any form of academic dishonesty. Any act of improperly representing another person&rsquo;s work as one&rsquo;s own (or allowing someone else to represent your work as their own) is construed as an act of academic dishonesty. These acts include but are not limited to, plagiarism in any form or use of information and materials not authorized by the instructor during an examination or for any assignment.</p>
+
     <p>If a faculty member judges a student to be guilty of any form of academic dishonesty, the student will receive a FAILING GRADE FOR THE COURSE. Academic dishonesty involving the abuse of RIT computing facilities may result in the pursuit of more severe action.</p>
+
     <p>If the student believes the action by the instructor to be incorrect or the penalty too severe, the faculty member will arrange to meet jointly with the student and with the faculty member&rsquo;s immediate supervisor. If the matter cannot be resolved at this level, an appeal may be made to the GCCIS Academic Conduct Committee.</p>
+
     <p>If the faculty member or the faculty member&rsquo;s immediate supervisor feels that the alleged misconduct warrants more severe action than failure in the course, the case may be referred to the GCCIS Academic Conduct Committee. The Academic Conduct Committee can recommend further action to the dean of the student&rsquo;s college including academic suspension or dismissal from the Institute.</p>
+
     <p>The following definitions will be used to clarify and explain unacceptable conduct. This is not intended to be an exhaustive list of specific actions but a reasonable description to guide one&rsquo;s actions.</p>
+
     <p>CHEATING includes knowingly using, buying, stealing, transporting or soliciting in whole or part the contents of an administered/unadministered test, test key, homework solution, paper, project, software project or computer program, or any other assignment. It also includes using, accessing, altering, or gaining entry to information held in a computer account or disk owned by another.</p>
+
     <p>COLLUSION means unauthorized collaboration with another person in preparing written work or computer work (including electronic media) offered for credit. The final work submitted by a student must be substantially the work of that student. Collaboration on an assignment is expressly forbidden unless it is explicitly designated as a group project. When there is any doubt, a student should consult the instructor (NOT ANOTHER STUDENT) as to whether some action is considered collusion.</p>
+
     <p>Whenever there is any question as to whether a particular action is considered academic dishonesty, the instructor should be consulted.</p>
 
     <h3>Title IX</h3>
     <p>Title IX violations are taken very seriously at RIT. RIT is committed to investigate complaints of sexual discrimination, sexual harassment, sexual assault and other sexual misconduct, and to ensure that appropriate action is taken to stop the behavior, prevent its recurrence and remedy its effects. Please view the <a href="https://www.rit.edu/fa/compliance/content/title-ix" target="_blank" rel="noopener">Title IX Rights &amp; Resources at RIT.</a></p>
+
     <p>RIT is committed to providing a safe learning environment, free of harassment and discrimination as articulated in our university policies located on our governance website. RIT&rsquo;s policies require faculty to share information about incidents of gender-based discrimination and harassment with RIT&rsquo;s Title IX coordinator or deputy coordinators, regardless of whether the incidents are stated to them in person or shared by students as part of their coursework.</p>
+    
     <p>If you have a concern related to gender-based discrimination and/or harassment and prefer to have a confidential discussion, assistance is available from one of RIT&rsquo;s confidential resources on campus (listed below).</p>
     <ul>
         <li>The Center for Women &amp; Gender: Campus Center Room 1760; 585-475-7464</li>
