closed open <p> tag on intro paragraphs

--- a/igm_mycourses_templates/tr_schedule_sprints.html
+++ b/igm_mycourses_templates/tr_schedule_sprints.html
@@ -38,7 +38,7 @@
         </div>
     </details>
 
-    <p class="intro">A full, week by week course schedule of topics and due dates is below. This is subject to change!
+    <p class="intro">A full, week by week course schedule of topics and due dates is below. This is subject to change!</p>
 
     <details>
         <summary>Sprint 0: Course Kickoff & Team Formation</summary>
@@ -644,17 +644,17 @@
                 <thead>
                     <tr>
                         <th>Section</th>
-                        <th colspan=2>Exam Day/Time</th>
+                        <th colspan="2">Exam Day/Time</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>Section xx</td>
-                        <td colspan=2>Time</td>
+                        <td colspan="2">Time</td>
                     </tr>
                     <tr>
                         <td>Section yy</td>
-                        <td colspan=2>Time</td>
+                        <td colspan="2">Time</td>
                     </tr>
                 </tbody>
             </table>
