Class cancellation text cleanup

--- a/igm_mycourses_templates/communications.html
+++ b/igm_mycourses_templates/communications.html
@@ -45,7 +45,7 @@
     <p>In the case of an illness or unexpected absence, the student should try to communicate with the faculty in as timely of a manner as possible. When class is missed, it is up to the student to make up work and to acquire any course materials. Absences in any form do not postpone due dates unless agreed upon by the instructor.</p>
 
     <h3>Class Cancellation</h3>
-    <p>If the faculty cannot attend a class session, students will be contacted via email and cancellation signs will be placed on classroom doors. Explicit instructions for cancellation will be communicated via myCourses and your RIT e-mail.</p>
+    <p>If class needs to be cancelled for any reason, students will be contacted via email, and an announcement will be posted in myCourses and Slack.</p>
 
 
     <h2>Outside of Class</h2>
